--- a/projekt.vcxproj
+++ b/projekt.vcxproj
@@ -42,6 +42,8 @@
     <None Include="shaders\shader_skybox.vert" />
     <None Include="shaders\shader_tex.frag" />
     <None Include="shaders\shader_tex.vert" />
+    <None Include="shaders\shader_tex_bloom.frag" />
+    <None Include="shaders\shader_tex_bloom.vert" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{1B448102-E76C-4347-BDC7-40D02A567DB6}</ProjectGuid>
