--- a/projekt.vcxproj
+++ b/projekt.vcxproj
@@ -40,6 +40,8 @@
     <None Include="shaders\shader_color.vert" />
     <None Include="shaders\shader_skybox.frag" />
     <None Include="shaders\shader_skybox.vert" />
+    <None Include="shaders\shader_sun.frag" />
+    <None Include="shaders\shader_sun.vert" />
     <None Include="shaders\shader_tex.frag" />
     <None Include="shaders\shader_tex.vert" />
     <None Include="shaders\shader_tex_bloom.frag" />
